# idle-crawler

./: .gitignore  .travis.yml  README.md
.github/workflows/: rust.yml
src/: Cargo.toml
src/client/: Cargo.toml  displayer.py
src/client/src/: main.rs  ui.rs
src/client_py/: client.py
src/core/: Cargo.toml  README.md
src/core/src/: buildings.rs  clock.rs  lib.rs  player.rs  response.rs  tile.rs  trade.rs
src/data/: resources.json
src/server/: Cargo.toml  README.md  tile.py
src/server/src/: buildings.rs  clock.rs  lib.rs  main.rs  player.rs  pos.rs  resources.rs  response.rs  tile.rs
src/utilities/: buildings.json  buildings.py
