[package]
name = "client"
version = "0.1.0"
authors = ["Daniel Schimanski <danny.manski135@gmail.com>", "s0lst1ce <thithib.cohergne@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = {path = "../core"}
crossterm = "0.17"
tui = { version = "0.10", default-features = false, features = ['crossterm'] }
